# Lipspeak

./: .gitignore  README.md
app/android/: README.md
app/android/Lipspeak/: settings.gradle.kts
app/android/Lipspeak/app/: build.gradle.kts
app/embedded/: README.md
app/embedded/lipspeak/src/: main.cpp
app/flutter/: README.md
app/flutter/lipspeak/: README.md  pubspec.yaml
app/flutter/lipspeak/linux/: CMakeLists.txt
app/flutter/lipspeak/test/: widget_test.dart
app/flutter/lipspeak/web/: index.html  manifest.json
app/flutter/lipspeak/windows/: CMakeLists.txt
app/web/: README.md
app/web/lipspeak/backend/: requirements.txt
core/: README.md
core-test/: README.md
core-test/grid-test/: main.py  pyproject.toml
core/grid/: .gitignore  pyproject.toml  requirements.txt
core/grid/app/: config.py  main.py
core/grid/app/routes/: transcribe.py
core/grid/app/schemas/: response.py
core/grid/app/services/: inference.py  preprocessing.py
datasets/: README.md
docs/: README.md
docs/api/: README.md
docs/database/: README.md
docs/embedded/: README.md
docs/flutter/: README.md
docs/models/: README.md
docs/web/: README.md
main/: README.md
main-test/: README.md
main-test/auto-avsr-test/: main.py  pyproject.toml
main/auto-avsr/: main.py  pyproject.toml
resources/: README.md
resources/academic/: README.md
resources/designs/: README.md
resources/images/: README.md
resources/links/: README.md
resources/papers/: README.md
resources/videos/: README.md
temp/: README.md
trash/: README.md
(+21 files in other folders)
