[project]
name = "grid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlib>=20.0.0",
    "editdistance>=0.8.1",
    "fastapi[standard]>=0.135.1",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "tensorflow>=2.21.0",
]
